@@ -1,7 +1,9 @@
 package dev.rosewood.roseskyblock.manager;
 
 import dev.rosewood.rosegarden.RosePlugin;
+import dev.rosewood.rosegarden.command.framework.RoseCommandWrapper;
 import dev.rosewood.rosegarden.manager.AbstractCommandManager;
+import dev.rosewood.roseskyblock.command.SkyblockCommandWrapper;
 
 import java.util.Collections;
 import java.util.List;
@@ -13,22 +15,13 @@ public class CommandManager extends AbstractCommandManager {
     }
 
     @Override
-    public List<String> getCommandPackages() {
-        return Collections.singletonList("dev.rosewood.roseskyblock.command.command");
+    public List<Class<? extends RoseCommandWrapper>> getRootCommands() {
+        return List.of(SkyblockCommandWrapper.class);
     }
 
     @Override
     public List<String> getArgumentHandlerPackages() {
-        return Collections.singletonList("dev.rosewood.roseskyblock.command.argument");
+        return List.of("dev.rosewood.roseskyblock.command.argument");
     }
 
-    @Override
-    public String getCommandName() {
-        return "rsb";
-    }
-
-    @Override
-    public List<String> getCommandAliases() {
-        return Collections.singletonList("island");
-    }
 }
